[package]
name = "sbpf-lld"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bpf-linker = "0.9.15"
clap = { version = "4.5", features = ["derive"] }
object = { version = "0.38.0", features = ["write_core","elf"] }
thiserror = "2.0.17"

aya-rustc-llvm-proxy = { version = "0.9.5", optional = true }
llvm-sys-19 = { package = "llvm-sys", features = ["disable-alltargets-init", "prefer-dynamic"], version = "191.0.0", optional = true }
llvm-sys-20 = { package = "llvm-sys", features = ["disable-alltargets-init", "prefer-dynamic"], version = "201.0.1", optional = true }
llvm-sys-21 = { package = "llvm-sys", features = ["disable-alltargets-init", "prefer-dynamic"], version = "211.0.0-rc1", optional = true }

tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-tree = "0.4"
tracing = "0.1"

[[bin]]
name = "sbpf-lld"
path = "src/bin/sbpf-lld.rs"

[features]
llvm-19 = ["dep:llvm-sys-19"]
llvm-20 = ["dep:llvm-sys-20"]
llvm-21 = ["dep:llvm-sys-21"]
rust-llvm-19 = [
    "dep:aya-rustc-llvm-proxy",
    "llvm-19",
    "llvm-sys-19/no-llvm-linking",
]
rust-llvm-20 = [
    "dep:aya-rustc-llvm-proxy",
    "llvm-20",
    "llvm-sys-20/no-llvm-linking",
]
rust-llvm-21 = [
    "dep:aya-rustc-llvm-proxy",
    "llvm-21",
    "llvm-sys-21/no-llvm-linking",
]
default = [
    "llvm-21",
    "rust-llvm-21",
]
